fix issue with footer covering main content

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,46 @@
-@media (min-width: 700px) {
+@media screen and (min-width: 700px) {
   .main-content {
     min-height: 1000px;
+  }
+}
+@media screen and (max-width: 699px) {
+  .main-content {
+    min-height: 1000px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .main-content {
+    min-height: 1200px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .main-content {
+    min-height: 1300px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .main-content {
+    min-height: 1400px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .main-content {
+    min-height: 1500px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .main-content {
+    min-height: 1650px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .main-content {
+    min-height: 1800px;
+  }
+}
+@media screen and (max-width: 300px) {
+  .main-content {
+    min-height: 1900px;
   }
 }
 
@@ -9,7 +49,6 @@
   margin: auto;
   padding: 10px;
   font-family: 'Roboto Condensed', sans-serif;
-  min-height: 1300px;
 }
 
 .headshot {
